[project]
name = "project-1"
version = "0.1.0"
description = "Learn gcp"
authors = [
    {name = "Angga"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
